@@ -203,3 +203,9 @@ def v14to15(portal_setup):
     portal_setup.runImportStepFromProfile(
         'profile-recensio.policy:default',
         'solr')
+
+
+def v15to16(portal_setup):
+    portal_setup.runImportStepFromProfile(
+        'profile-recensio.policy:default',
+        'plone.app.registry')
